# Rainbow-Concurrency

./: .gitignore  CMakeLists.txt  README.md  main.cpp
concurrency-2threads/: CMakeLists.txt
concurrency-2threads/src/: concurrency.cpp  concurrency.h  dictionary.cpp  main.cpp  utils.cpp  utils.h
concurrency-3threads/: CMakeLists.txt
concurrency-3threads/src/: concurrency.cpp  concurrency.h  lockFreeQueue.cpp  lockFreeQueue.h  main.cpp  utils.cpp  utils.h
datasets/Gzip/Alexa/decoded/: 100-www.txxx.com.txt.out  102-www.google.com.sa.txt.out  135-www.livejasmin.com.txt.out  150-www.popcash.net.txt.out  164-www.chase.com.txt.out  17-www.hao123.com.txt.out  184-www.washingtonpost.com.txt.out  20-www.360.cn.txt.out  248-www.gearbest.com.txt.out  26-www.google.fr.txt.out  275-www.google.cl.txt.out  326-www.asos.com.txt.out  351-www.wix.com.txt.out  415-www.mega.nz.txt.out  445-www.kooora.com.txt.out  464-www.youdao.com.txt.out  476-www.amazon.ca.txt.out  56-www.imgur.com.txt.out  61-www.github.com.txt.out  77-www.dropbox.com.txt.out
datasets/Gzip/Google/decoded/: BOOMER9.txt.out  Covid8.txt.out  DONDA2.txt.out  DontGoYet5.txt.out  IShouldBePaidTo7.txt.out  Liz-Cheney9.txt.out  Monkeypox9.txt.out  Nogowski13.txt.out  Nogowski15.txt.out  Nogowski8.txt.out  Paddack10.txt.out  shotzi1.txt.out  thursdaymorning4.txt.out
naive/: CMakeLists.txt  compile.sh
naive-3threads/: CMakeLists.txt
naive-3threads/pattern/: pattern_accept.txt
naive-3threads/src/: utils.cpp
naive-o/: main.cpp
naive/src/: main.cpp  utils.cpp  utils.h
